# wsi-stitch

./: .gitignore  PROJECT_REPORT.md  README.md  Stitch_Engine_Formal_Report.doc  pyproject.toml  requirements.txt
src/stitch_engine/: __init__.py  _vips.py  alignment.py  patch_folder.py  scheduler.py  stitcher.py
tests/: test_alignment.py  test_average_writer.py  test_cell_writer.py  test_patch_folder.py  test_scheduler.py  test_stitcher.py
tools/: generate_patches.py
vips-dev-8.15/: versions.json
vips-dev-8.15/etc/ImageMagick-6/: delegates.xml
vips-dev-8.15/include/: matio_pubconf.h
vips-dev-8.15/include/ImageMagick-6/magick/: version.h  (+1 more)
vips-dev-8.15/include/libheif/: heif_version.h
vips-dev-8.15/include/vips/: version.h
vips-dev-8.15/lib/: libcfitsio.def  libcfitsio.lib  libjxl.def  libjxl_cms.def  libjxl_cms.lib  libpoppler.def  libpoppler.lib  libxml2.def  libxml2.lib
vips-dev-8.15/lib/cfitsio-4.4.0/: cfitsio-config-version.cmake
vips-dev-8.15/lib/pkgconfig/: ImageMagick-6.Q16.pc  MagickCore.pc  MagickWand-6.Q16.pc  Wand.pc  aom.pc  cfitsio.pc  expat.pc  fontconfig.pc  gdk-pixbuf-2.0.pc  gio-2.0.pc  gio-windows-2.0.pc  girepository-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  harfbuzz-cairo.pc  harfbuzz-gobject.pc  harfbuzz-subset.pc  harfbuzz.pc  lcms2.pc  libffi.pc  libheif.pc  libhwy.pc  libjxl.pc  libjxl_cms.pc  libjxl_threads.pc  libopenjp2.pc  libpng.pc  librsvg-2.0.pc  libxml-2.0.pc  matio.pc  pango.pc  pangocairo.pc  pangofc.pc  pangoft2.pc  pangoot.pc  pangowin32.pc  pixman-1.pc  (+6 more)
(+5 files in other folders)
