[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stitch-engine"
version = "0.1.0"
description = "Variable-overlap whole-slide patch scheduling and stitching utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
image = ["pillow>=10", "tifffile>=2024.8.30", "pyvips>=2.2"]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
